--- a/css/styles.css
+++ b/css/styles.css
@@ -12,27 +12,31 @@ html {
 body {
   box-sizing: border-box;
   text-align: center;
-  position: relative; }
+  position: relative;
+  background-color: lightgrey; }
 
 h1 {
   font-size: 5rem;
-  color: #614385; }
+  color: black;
+  margin: 2rem 0; }
 
 .cards {
   width: 80rem;
-  height: 90rem;
+  min-height: 100%;
   display: grid;
   grid-template-columns: repeat(4, auto);
   grid-gap: 5px;
   margin: 2rem auto; }
 
 .card {
-  width: 20rem;
-  height: 28rem;
+  width: 17rem;
+  height: 24rem;
   position: relative;
   transform-style: preserve-3d;
   transition: transform 0.6s;
-  border-radius: 5px; }
+  border-radius: 1rem; }
+  .card:hover {
+    cursor: pointer; }
   .card__box {
     width: 200px;
     height: 100%;
@@ -43,18 +47,48 @@ h1 {
     backface-visibility: hidden;
     border: 5px solid black; }
   .card__front {
-    background: linear-gradient(to right, #516395, #614385);
+    background: linear-gradient(-40deg, #eedf88, #ee7752, #e73c7e, #23a6d5);
+    background-size: 400% 400%;
+    animation: change-color 20s ease infinite;
     transform: rotateY(0deg);
     z-index: 2; }
   .card__back {
-    background-color: wheat;
+    background-color: lightgray;
     display: flex;
     justify-content: center;
     align-items: center;
     transform: rotateY(180deg); }
+
+button {
+  display: inline-block;
+  padding: 1rem 3rem;
+  font-size: 2rem;
+  border-radius: 0.5rem;
+  border: 1px solid transparent;
+  background-color: black;
+  color: white;
+  margin-bottom: 2rem; }
+  button:focus {
+    border: 1px solid #e73c7e; }
+  button:hover {
+    cursor: pointer; }
+
+.seconds {
+  font-size: 2rem; }
 
 .card.visible > .card__box > .card__front {
   transform: rotateY(180deg); }
 
 .card.visible > .card__box > .card__back {
   transform: rotateY(0deg); }
+
+.not-clickable {
+  pointer-events: none; }
+
+@keyframes change-color {
+  0% {
+    background-position: 0 50%; }
+  50% {
+    background-position: 50% 100%; }
+  100% {
+    background-position: 0 50%; } }
